Bug 442741 - Duplicating empty tab causes crash
Summary: Duplicating empty tab causes crash
Status: RESOLVED FIXED
Alias: None
Product: KSystemLog
Classification: Applications
Component: general (other bugs)
Version First Reported In: 21.08.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Nicolas Ternisien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-20 13:57 UTC by Oleg Solovyov
Modified: 2021-10-18 09:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg Solovyov 2021-09-20 13:57:53 UTC
STEPS TO REPRODUCE
1. run systemlog
2. Window -> New Tab, move to Empty Log
3. Window -> Duplicate Tab

OBSERVED RESULT
Crash

EXPECTED RESULT
Tab is duplicated

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.11.0-34-generic
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Backtrace:

Thread 1 (Thread 0x7f08280469c0 (LWP 3684)):
[KCrash Handler]
#4  LogManager::initialize (this=this@entry=0x55a9c00c2e80, mode=mode@entry=0x0, analyzerOptions=...) at ./src/lib/logManager.cpp:173
#5  0x000055a9be694a9f in TabLogViewsWidget::load (this=this@entry=0x55a9bf824d60, logMode=logMode@entry=0x0, manager=0x55a9c00c2e80, analyzerOptions=...) at ./src/tabLogViewsWidget.cpp:268
#6  0x000055a9be696c08 in TabLogViewsWidget::duplicateTab (this=0x55a9bf824d60) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qvariant.h:397
#7  0x000055a9be6764bc in TabLogViewsWidget::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7fff00be2d00) at ./obj-x86_64-linux-gnu/src/ksystemlog_autogen/EWIEGA46WW/moc_tabLogViewsWidget.cpp:169
#8  0x00007f082bddbdd0 in doActivate<false> (sender=0x55a9bfa911a0, signal_index=4, argv=0x7fff00be2d00) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:395
#9  0x00007f082bdd5167 in QMetaObject::activate (sender=sender@entry=0x55a9bfa911a0, m=m@entry=0x7f082d0ce1c0 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff00be2d00) at kernel/qobject.cpp:3946
#10 0x00007f082cbb68e6 in QAction::triggered (this=this@entry=0x55a9bfa911a0, _t1=<optimized out>) at .moc/moc_qaction.cpp:376
#11 0x00007f082cbb8fb8 in QAction::activate (this=0x55a9bfa911a0, event=<optimized out>) at kernel/qaction.cpp:1161
#12 0x00007f082cd43832 in QMenuPrivate::activateCausedStack (this=this@entry=0x55a9bfa6ca80, causedStack=..., action=action@entry=0x55a9bfa911a0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1384
#13 0x00007f082cd4af7e in QMenuPrivate::activateAction (this=this@entry=0x55a9bfa6ca80, action=action@entry=0x55a9bfa911a0, action_e=action_e@entry=QAction::Trigger, self=self@entry=true) at widgets/qmenu.cpp:1461
#14 0x00007f082cd4c212 in QMenu::mouseReleaseEvent (this=0x55a9bfbd31c0, e=0x7fff00be33e0) at widgets/qmenu.cpp:2967
#15 0x00007f082cbffcf6 in QWidget::event (this=this@entry=0x55a9bfbd31c0, event=event@entry=0x7fff00be33e0) at kernel/qwidget.cpp:8664
#16 0x00007f082cd4e81b in QMenu::event (this=0x55a9bfbd31c0, e=0x7fff00be33e0) at widgets/qmenu.cpp:3089
#17 0x00007f082cbbcdc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55a9bfbd31c0, e=0x7fff00be33e0) at kernel/qapplication.cpp:3632
#18 0x00007f082cbc5e77 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3076
#19 0x00007f082bda4d7a in QCoreApplication::notifyInternal2 (receiver=0x55a9bfbd31c0, event=0x7fff00be33e0) at ../../include/QtCore/5.15.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#20 0x00007f082cbc50a7 in QApplicationPrivate::sendMouseEvent (receiver=0x55a9bfbd31c0, event=event@entry=0x7fff00be33e0, alienWidget=0x0, nativeWidget=0x55a9bfbd31c0, buttonDown=<optimized out>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#21 0x00007f082cc1b9de in QWidgetWindow::handleMouseEvent (this=0x55a9c003bc40, event=0x7fff00be3860) at /usr/include/c++/9/bits/atomic_base.h:413
#22 0x00007f082cc1e264 in QWidgetWindow::event (event=0x7fff00be3860, this=0x55a9c003bc40) at kernel/qwidgetwindow.cpp:300
#23 QWidgetWindow::event (this=0x55a9c003bc40, event=0x7fff00be3860) at kernel/qwidgetwindow.cpp:239
#24 0x00007f082cbbcdc3 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55a9c003bc40, e=0x7fff00be3860) at kernel/qapplication.cpp:3632
#25 0x00007f082cbc5bb8 in QApplication::notify(QObject*, QEvent*) () at kernel/qapplication.cpp:3156
#26 0x00007f082bda4d7a in QCoreApplication::notifyInternal2 (receiver=0x55a9c003bc40, event=0x7fff00be3860) at ../../include/QtCore/5.15.3/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#27 0x00007f082c4c64e8 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () at kernel/qguiapplication.cpp:2282
#28 0x00007f082c4c7b55 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x55a9c005bb30) at kernel/qguiapplication.cpp:2002
#29 0x00007f082c49f7ac in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1169
#30 0x00007f0827c21eae in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#31 0x00007f082a4b117d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#32 0x00007f082a4b1400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#33 0x00007f082a4b14a3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007f082bdff5d2 in QEventDispatcherGlib::processEvents (this=0x55a9bf7590a0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#35 0x00007f082bda387b in QEventLoop::exec (this=this@entry=0x7fff00be3c00, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#36 0x00007f082bdaba34 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#37 0x000055a9be675890 in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:106
Comment 1 Bug Janitor Service 2021-09-21 08:55:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/ksystemlog/-/merge_requests/10
Comment 2 Oleg Solovyov 2021-10-18 09:01:58 UTC
Git commit b56f4bee1578c4d17c7d3d8ce1374f5f87e66fc5 by Oleg Solovyov.
Committed on 18/10/2021 at 08:18.
Pushed by osolovyov into branch 'master'.

Fix crash when duplicating an empty tab

M  +3    -0    src/lib/logManager.cpp

https://invent.kde.org/system/ksystemlog/commit/b56f4bee1578c4d17c7d3d8ce1374f5f87e66fc5