Fix crash when duplicating an empty tab

BUG: 442741